--- a/connexion/conn.css
+++ b/connexion/conn.css
@@ -1,32 +1,37 @@
 
 body{
-      position: relative;
-      margin: 0;
-      background: radial-gradient(rgb(163, 240, 140), rgb(132, 231, 132),#49e93b);
+      background:rgb(163, 240, 140);
       font-family: Arial, Helvetica, sans-serif;
-      display: flex;
-      justify-content: center;
+      text-align: center;
+      width: 100%;
+      height: 90vh;
       
 
 }
 .form{
-      background: #f1f1f1;
-      margin-top: 50%
-      text-align: center;
+      flex-direction: column;
+      position: absolute;
+      top: 20%;
+      left: 40%;
+      transform: translateX(-30%);
+      background-color: aliceblue;
       width: 50%;
-      
-}
-form{
-      width: 100%;
-      padding: 10px;
-
-
+      padding: 40px;
+      font-family: Arial, Helvetica, sans-serif;
+      border-radius: 10px;
 }
 input{
+      height: 40px;
       border: none;
-      border-bottom: 1px solid rgb(132, 231, 132);
-      text-align: center;
-      font-size: 20px;
-      padding: 10px;
+      border-bottom: 1px solid rgb(163, 240,140);
       outline: none;
+      width: 100%;
+      margin: 10px 0;
+      text-align: center;
+      border-radius: 8px;
+      font-size: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+
